#3 Fix display alignment
The columns of the schedule component now render with the same width

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -84,7 +84,6 @@ section .map {
 }
 
 section .schedule-related {
-  background-color: #1082e03c;
   width: 60%;
   height: 100%;
   display: flex;
@@ -118,7 +117,6 @@ label {
 }
 
 section .schedule-related .filtered-schedule {
-  background-color: #e08d1029;
   width: 100%;
   height: 85%;
   display: flex;
